Closed
Bug 849612
Opened 12 years ago
Closed 12 years ago
Fix build problems caused by Bug 847195 [error: nsIDOMNamedNodeMap.h: No such file or directory]
Categories
(MailNews Core :: Composition, defect)
MailNews Core
Composition
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 22.0
People
(Reporter: mcsmurf, Assigned: neil)
References
Details
Attachments
(1 file, 2 obsolete files)
|
7.60 KB,
patch
|
standard8
:
review+
Ms2ger
:
feedback+
|
Details | Diff | Splinter Review |
It looks like Bug 847195 removed the nsIDOMNamedNodeMap class, due to that build failure(s?) occur, from SeaMonkey build log:
[...]
/builds/slave/c-cen-t-lnx-ntly/build/mailnews/compose/src/nsMsgCompose.cpp:17:32: fatal error: nsIDOMNamedNodeMap.h: No such file or directory
[...]
| Reporter | ||
Updated•12 years ago
|
Severity: normal → blocker
OS: Windows XP → All
Hardware: x86 → All
Updated•12 years ago
|
Assignee: nobody → Ms2ger
Comment 1•12 years ago
|
||
I changed the code to use more well-supported APIs, because there's a good chance I'd break this code again soon if I didn't.
Attachment #723188 -
Flags: review?(bugzilla)
Comment 2•12 years ago
|
||
With build errors fixed.
Attachment #723188 -
Attachment is obsolete: true
Attachment #723188 -
Flags: review?(bugzilla)
Attachment #723194 -
Flags: review?(bugzilla)
Updated•12 years ago
|
Summary: Fix build problems caused by Bug 847195 → Fix build problems caused by Bug 847195 [error: nsIDOMNamedNodeMap.h: No such file or directory]
Updated•12 years ago
|
Attachment #723194 -
Flags: review?(mozilla)
Attachment #723194 -
Flags: review?(mbanner)
| Reporter | ||
Comment 3•12 years ago
|
||
Actually I think those two guys are better reviewers for this :)
Why isn't msgCompose changed to use nsDOMMozNamedAttrMap.h as the files in the respective mozilla.central patch? It appears to me the mozilla namespace adds quite a lot of compile time. But I haven't benchmarked it precisely.
Status: NEW → ASSIGNED
Comment 5•12 years ago
|
||
No idea what you're talking about with the compile time. The reason I'm not using nsIDOMMozNamedAttrMap is because I want to kill that interface.
| Assignee | ||
Comment 6•12 years ago
|
||
Comment on attachment 723194 [details] [diff] [review]
Patch v1.1
Although by default mailnews gets linked into libxul I'd appreciate it if you avoided libxul-only code so that it can build against xulrunner.
| Assignee | ||
Comment 7•12 years ago
|
||
Attachment #723385 -
Flags: feedback?(Ms2ger)
| Assignee | ||
Updated•12 years ago
|
Attachment #723385 -
Attachment is patch: true
Comment 8•12 years ago
|
||
Comment on attachment 723385 [details] [diff] [review]
Possible patch
Review of attachment 723385 [details] [diff] [review]:
-----------------------------------------------------------------
This would work for now, yes.
Attachment #723385 -
Flags: feedback?(Ms2ger) → feedback+
Comment 9•12 years ago
|
||
Comment on attachment 723385 [details] [diff] [review]
Possible patch
Review of attachment 723385 [details] [diff] [review]:
-----------------------------------------------------------------
Seems reasonable to me.
Attachment #723385 -
Flags: review+
| Assignee | ||
Comment 10•12 years ago
|
||
Assignee: Ms2ger → neil
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Comment 11•12 years ago
|
||
Do we obsolete the patch v1.1 or is that open for a way to fix this in a different way in the future?
Comment 12•12 years ago
|
||
Comment on attachment 723194 [details] [diff] [review]
Patch v1.1
This won't work at this point.
Attachment #723194 -
Attachment is obsolete: true
Attachment #723194 -
Flags: review?(mozilla)
Attachment #723194 -
Flags: review?(mbanner)
Attachment #723194 -
Flags: review?(bugzilla)
Updated•12 years ago
|
Target Milestone: --- → Thunderbird 22.0
You need to log in
before you can comment on or make changes to this bug.
Description
•