Bug 849612 Deal with removal of nsIDOMNamedNodeMap.h r=Standard8 f=Ms2ger